// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subaccount selectors selectInitialSubaccountValues by default 1`] = `
Object {
  "ipPool": undefined,
  "name": undefined,
  "restrictedToIpPool": false,
  "status": undefined,
}
`;

exports[`Subaccount selectors selectInitialSubaccountValues should return status + by SparkPost if set by compliance 1`] = `
Object {
  "ipPool": undefined,
  "name": "subby",
  "restrictedToIpPool": false,
  "status": "terminated by SparkPost",
}
`;

exports[`Subaccount selectors selectInitialSubaccountValues should return status if not set by compliance 1`] = `
Object {
  "ipPool": "pool-id",
  "name": "subby",
  "restrictedToIpPool": true,
  "status": "valid",
}
`;

exports[`Subaccount selectors selectInitialSubaccountValues with an ip pool 1`] = `
Object {
  "ipPool": "test",
  "name": undefined,
  "restrictedToIpPool": true,
  "status": undefined,
}
`;
